test/errors/not_non_bool.sl
# expect: COMPERROR
not 1;
